<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Data Collector</string>
    <string name="startButton">Start</string>
    <string name="stopButton">Stop</string>
    <string name="results">Sensor results:</string>
    <string name="acceleration">Acceleration:</string>
    <string name="orientation">Orientation:</string>
    <string name="gyroscope">Gyroscope:</string>
    <string name="magneticfield">Magnetic field:</string>
    <string name="proximity">Proximity:</string>
    <string name="gravity">Gravity:</string>
    <string name="soundlevel">Sound Level:</string>
    <string name="linearaccel">Linear Accelaration:</string>
    <string name="rotvect">Rotation Vector:</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="createacc_text">User Info</string>
    <string name="fname_text">First Name</string>
    <string name="lname_text">Last Name</string>
    <string name="mWeight">Height</string>
    <string name="mHeight">Weight</string>
    <string name="mSubmit">Submit</string>
    <string name="mActivity_Selector">Select the activity to run </string>
    <string name="dob_text">Date of Birth</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="sex_text">Sex</string>
    <string name="title_activity_user_info">User_info</string>
    <string name="hello_world">Hello world!</string>
    <string name="Activity_Selector">Activity Selection</string>


    <color name="light_gray">#C3C3C3</color>

    

</resources>