<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/Barra_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/Layout_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/accel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceleration" />

            <TextView
                android:id="@+id/acelerationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/orie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation" />

            <TextView
                android:id="@+id/orientationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/gyro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gyroscope" />

            <TextView
                android:id="@+id/gyroscopeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/magn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magneticfield" />

            <TextView
                android:id="@+id/magneticfieldView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/prox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proximity" />

            <TextView
                android:id="@+id/proximityView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/grav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravity" />

            <TextView
                android:id="@+id/gravityview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soundlevel" />

            <TextView
                android:id="@+id/soundlevelview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/linacc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linearaccel" />

            <TextView
                android:id="@+id/lineaccview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/rotvect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotvect" />

            <TextView
                android:id="@+id/rotationvector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/StartButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/custom_button"
                android:onClick="start"
                android:text="@string/startButton"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>