<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/Barra_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/Layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="text"
                android:text="@string/createacc_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="sans" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fname_text"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lname_text"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:hint="@string/dob_text"
                android:inputType="date"
                android:onClick="showDatePickerDialog" >

                <requestFocus />
            </EditText>

            <RadioGroup
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/sumale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male_text" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/sex_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/light_gray"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/sufemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical|end"
                    android:text="@string/female_text" />
            </RadioGroup>

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mHeight"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mWeight"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:onClick="mSubmit"
                android:text="@string/mSubmit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>